src/app/right-tab/right-tab.component.scss
/* ... */
//The classes for the card set to fit the home
.home {
    background-color: rgb(50, 72, 244);
    height: 90%;
    border-radius: 22px;
    color: white;
    position: relative;
}

.container_name {
    height: 72%;
    position: relative;
}

.name {
    font-size: 4.5em;
    line-height: 1em;
    position: absolute;
    bottom: 50%;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 1%;
    font-weight: bold;
}

.description {
    position: absolute;
    bottom: 20%;
    margin-left: 10%;
    margin-right: 10%;
    text-align: justify;
    line-height: 1.5em;
    font-size: 1.1em;
}

.button {
    padding-left: 3%;
    padding-right: 3%;
}

.buttons {
    margin-left: 10%;
    margin-right: 10%;
}

//-----Night mode button-------
.nightModeButton {
    padding: 15px 15px 10px 15px;
    border: none;
    text-align: center;
    background: #333333;
    font-size: 1.2em;
    text-decoration: none;
    color: white;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
    outline: 0;
    cursor: pointer;
    position: relative;
    left: 10%;
    top: 10%;
}
.nightModeButton:hover {
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.button-image {
    height: 20px;
    margin-right: 5px;
    margin-bottom: 5px;
    vertical-align: middle;
}

button.night-mode {
    color: #333333;
    background-color: white;
}

//-----Translation select
//-----Thanks to https://codepen.io/pavelvaravko/pen/qjojOr-----
//-----------------------
.select {
    position: relative;
    width: 15%;
    left: 75%;
    top: 5%;
}

.select-text {
    position: relative;
    z-index: 1; // To the front
    font-family: inherit;
    background-color: transparent;
    width: 100%;
    cursor: pointer;
    padding: 10px 10px 10px 0;
    font-size: 1.1em;
    border-radius: 0;
    border: none;
    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
}

/* Remove focus */
.select-text:focus {
    outline: none;
    border-bottom: 1px solid rgba(0, 0, 0, 0);
}

/* Use custom arrow */
.select .select-text {
    appearance: none;
    -webkit-appearance: none;
}

.select:after {
    position: absolute;
    top: 18px;
    right: 10px;
    /* Styling the down arrow */
    width: 0;
    height: 0;
    padding: 0;
    content: "";
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
    border-top: 6px solid rgba(0, 0, 0, 0.82);
    pointer-events: none;
}

/* LABEL ======================================= */
.select-label {
    color: #fff;
    font-size: 1.2em;
    font-weight: normal;
    position: absolute;
    pointer-events: none;
    left: 0;
    top: 10px;
    transition: 0.2s ease all;
}

/* active state */
.select-text:focus ~ .select-label,
.select-text:valid ~ .select-label {
    color: #fff;
    top: -20px;
    transition: 0.2s ease all;
    font-size: 1.1em;
}

/* BOTTOM BARS ================================= */
.select-bar {
    position: relative;
    display: block;
    width: 100%;
}

.select-bar:before,
.select-bar:after {
    content: "";
    height: 2px;
    width: 0;
    bottom: 1px;
    position: absolute;
    background: #fff;
    transition: 0.2s ease all;
}

.select-bar:before {
    left: 50%;
}

.select-bar:after {
    right: 50%;
}

/* active state */
.select-text:focus ~ .select-bar:before,
.select-text:focus ~ .select-bar:after {
    width: 50%;
}

/* HIGHLIGHTER ================================== */
.select-highlight {
    position: absolute;
    height: 60%;
    width: 100px;
    top: 25%;
    left: 0;
    pointer-events: none;
    opacity: 0.5;
}

//The classes for the card set to fix the about me
.about-me {
    background-color: white;
    height: 70%;
    border-radius: 22px;
    margin-top: 5%;
}

.about-photo {
    width: 35%;
    height: 70%;
    display: inline-block;
}

.profile-picture {
    height: 12em;
    width: 12em;
    border-radius: 100%;
    margin: 19%;
    margin-top: 7%;
    border: 0.2em solid white;
}

.about-text {
    width: 60%;
    margin-right: 5%;
    height: 70%;
    display: inline-block;
    vertical-align: top;
}

.about-hello {
    margin-top: 7%;
    font-size: 3em;
    font-weight: bold;
    height: 13%;
}

.about-description {
    height: 30%;
    color: rgb(150, 150, 150);
    text-align: justify;
}

.about-data {
    height: 20%;
    color: rgb(150, 150, 150);
}

.about-data-left {
    width: 50%;
    height: 100%;
    display: inline-block;
    vertical-align: top;
}

.about-data-right {
    width: 50%;
    height: 100%;
    display: inline-block;
    vertical-align: top;
}

.about-buttons {
    height: 30%;
}

.last {
    margin-bottom: 3%;
}

.first {
    margin-top: 5%;
}

//The classes for the card set to fix the timeline
.time {
    background-color: white;
    height: auto;
    border-radius: 22px;
    margin-top: 5%;
    font-size: 1em;
}

//The classes for the card set to fix the skills
.skills {
    background-color: white;
    height: auto;
    border-radius: 22px;
    margin-top: 5%;
    font-size: 1.1em;
    line-height: 1.5em;
    padding-bottom: 5%;
}

.skill-set {
    margin-left: 7%;
    margin-right: 5%;
}

.skill-title {
    font-size: 1.5em;
    font-weight: bold;
    color: rgb(50, 72, 244);
}

.skill-title-column {
    display: inline-block;
    width: 49%;
    margin-top: 2%;
    vertical-align: top;
}
.flag {
    width: 7%;
}
.flag-title {
    margin-top: 2%;
}

.skill-set h2 {
    display: inline-block;
    vertical-align: top;
    padding-top: 1.7%;
    padding-left: 2%;
}

//The classes for the card set to fix the main-skills
.main-skills {
    background-color: rgb(50, 72, 244);
    height: auto;
    border-radius: 22px;
    margin-top: 5%;
    font-size: 1.1em;
    line-height: 1.5em;
    color: white;
}
/* ... */

